--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Cipher Gen</h1>
 	  <div id="cipher-box">
 	    <p id="word">Word</p>
-      <p id="time">45</p> 
+      <p id="time">30</p> 
     </div>
 
     <div id="time-box">
@@ -72,6 +72,7 @@ let playPause = document.querySelector('#playPause');
       playPause.classList.add("fa-pause");
       sCloudPlayer.play();
       switchWord(); 
+      countdown(interval)
     } else {
       play = false; 
       playPause.classList.remove("fa-pause");
@@ -88,37 +89,47 @@ let playPause = document.querySelector('#playPause');
 
 
 /////////////TIMER/////////////
+
+
 function countdown(time){
-  while(time > 0){
-    time--; 
-  }
+  setTimeout(()=>{
+    interval = time; 
+    if(!play){
+      return; 
+    }
+    if(time/1000 < 0){
+      time = interval; 
+    }
+    $("#time").text(time/1000);
+    time-=1000;
+    countdown(time);
+  }, 1000)
 } 
 
 
 
 /////TIME BUTTON EVENTS - CHANGE INTERVALS BETWEEN WORD CHANGE//////
   $("#fifteen").on("click", ()=>{
-    value = parseInt($("#fifteen").val()); 
-    console.log(value); 
-    $("#time").text(parseInt(value,10)/1000);
-    interval = parseInt(value,10); 
+    value = parseInt($("#fifteen").val(),10); 
+    $("#time").text(value/1000);
+    interval = parseInt(value,10);
   });
 
   $("#thirty").on("click", ()=>{
-    value = $("#thirty").val();
-    $("#time").text(parseInt(value,10)/1000)
+    value = parseInt($("#thirty").val(),10); 
+    $("#time").text(value/1000);
     interval = parseInt(value,10); 
   });
 
   $("#forty-five").on("click", ()=>{
-    value = $("#forty-five").val();
-    $("#time").text(parseInt(value,10)/1000)
+    value = parseInt($("#forty-five").val(),10); 
+    $("#time").text(value/1000);
     interval = parseInt(value,10); 
   });
 
   $("#sixty").on("click", ()=>{
-    value = $("#sixty").val(); 
-    $("#time").text(parseInt(value,10)/1000)
+    value = parseInt($("#sixty").val(),10); 
+    $("#time").text(value/1000);
     interval = parseInt(value,10);
   });
 
