styled topics menu and changed background to biggie

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 
   <div id="generator">
     <i id="topicBtn" class="fa fa-bars" aria-hidden="true"></i>
-    <div id="topics-box">
-      <ul>
-        <li><span>Trending Twitter Tags</span></li>
-        <li><span>Actors/Actresses</span></li>
-        <li><span>Sports</span></li>
-        <li><span>Love</span></li>
+    <div id="topics-box" class="mainText">
+      <ul id=#topicsList>
+        <li><i class="far fa-star-half"></i><strong> Trending Twitter Tags</strong></li>
+        <li><i class="far fa-star-half"></i><strong>Actors/Actresses</strong></li>
+        <li><i class="far fa-star-half"></i><strong>Sports</strong></li>
+        <li><i class="far fa-star-half"></i><strong>Love</strong></li>
       </ul>
     </div>
     <div id="cipher-box">
-      <p id="word">Press Start</p>
-      <p id="time">30</p>
+      <p id="word" class="mainText">Press Start</p>
+      <p id="time" class="mainText">30</p>
     </div>
 
     <div id="time-box">
