--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
 
 <body>
   <h1>Cipher Gen</h1>
-
   <div id="generator">
     <i id="topicBtn" class="fa fa-bars" aria-hidden="true"></i>
     <div id="topics-box" class="mainText">
       <ul id=#topicsList>
-        <li><i class="far fa-star-half"></i><strong> Trending Twitter Tags</strong></li>
-        <li><i class="far fa-star-half"></i><strong>Actors/Actresses</strong></li>
-        <li><i class="far fa-star-half"></i><strong>Sports</strong></li>
-        <li><i class="far fa-star-half"></i><strong>Love</strong></li>
+        <li><i class="fas fa-palette"></i><strong> Trending Twitter Tags</strong></li>
+        <li><i class="fas fa-palette"></i><strong> Actors/Actresses</strong></li>
+        <li><i class="fas fa-palette"></i><strong> Sports</strong></li>
+        <li><i class="fas fa-palette"></i><strong> Love</strong></li>
       </ul>
     </div>
     <div id="cipher-box">
-      <p id="word" class="mainText">Press Start</p>
+      <p id="word" class="mainText">Press Play</p>
       <p id="time" class="mainText">30</p>
     </div>
 
