--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <i id="topicBtn" class="fa fa-bars" aria-hidden="true"></i>
     <div id="topics-box" class="mainText">
       <ul id=#topicsList>
+        <li id="basicOption"><i class="fas fa-palette"></i><strong> Basic Words</strong></li>
         <li><i class="fas fa-palette"></i><strong> Trending Twitter Tags</strong></li>
-        <li><i class="fas fa-palette"></i><strong> Actors/Actresses</strong></li>
+        <li id="actorsActressOption"><i class="fas fa-palette"></i><strong> Actors/Actresses</strong></li>
         <li><i class="fas fa-palette"></i><strong> Sports</strong></li>
         <li><i class="fas fa-palette"></i><strong> Love</strong></li>
       </ul>
