--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <title>Cipher Gen</title>
   <script src="other/jquery.js"></script>
-  <script src="other/soundcloudWidget.js"></script>
+  <script src="other/soundcloudWidget.js" defer></script>
   <script src="scripts/main.js" defer></script>
   <script src="wordBanks/actorActress.js"></script>
   <script src="wordBanks/word_generator.js"></script>
+  <script src="wordBanks/animals.js"></script>
   <script src="scripts/timeButtons.js"></script>
   <script src="scripts/topicMenu.js" defer></script>
   <link rel="stylesheet" href="styleSheets/cipher.css" />
@@ -20,15 +21,15 @@
 
 <body>
   <h1>Cipher Gen</h1>
+  <i id="topicBtn" class="fa fa-bars" aria-hidden="true"></i>
   <div id="generator">
-    <i id="topicBtn" class="fa fa-bars" aria-hidden="true"></i>
     <div id="topics-box" class="mainText">
       <ul id=#topicsList>
-        <li id="basicOption"><i class="fas fa-palette"></i><strong> Basic Words</strong></li>
-        <li><i class="fas fa-palette"></i><strong> Trending Twitter Tags</strong></li>
-        <li id="actorsActressOption"><i class="fas fa-palette"></i><strong> Actors/Actresses</strong></li>
-        <li><i class="fas fa-palette"></i><strong> Sports</strong></li>
-        <li><i class="fas fa-palette"></i><strong> Love</strong></li>
+        <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
+        <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
+        <li><i class="fas fa-angle-right"></i><strong> Trending Twitter Tags</strong></li>
+        <li id="animalsOption"><i class="fas fa-angle-right"></i><strong>Animals</strong></li>
+        <li><i class="fas fa-angle-right"></i><strong> Donkey</strong></li>
       </ul>
     </div>
     <div id="cipher-box">
@@ -56,9 +57,9 @@
       <i class="fas fa-forward" id="nextBtn"></i>
     </div>
 
-    <div id="sound-box">
-      <iframe id="sCloud" width="70%" height="300" scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
+  </div>
+  <div id="sound-box">
+    <iframe id="sCloud" width="70%" height="300" scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   </div>
 
 </body>
