--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <h1>Cipher Gen</h1>
   <div id="controlMenu">
     <i id="topicBtn" class="fa fa-bars controlBtn" aria-hidden="true"></i>
-    <div id="topics-box" class="mainText">
+    <div id="topics-box" class="mainText controlMenu">
       <ul id=#topicsList>
         <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
         <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
@@ -33,14 +33,26 @@
       </ul>
     </div>
     <i id="beatControlBtn" class="fa fa-music controlBtn" aria-hidden="true"></i>
+    <div id="musicBox" class="controlMenu mainText">
+      <ul id="musicControls">
+        <li>something</li>
+        <li>something</li>
+        <li>something</li>
+      </ul>
+      <div>
+        <iframe id="sCloud" scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      </div>
+    </div>
     <i id="backgroundBtn" class="fa fa-camera controlBtn" aria-hidden="true"></i>
   </div>
   <div id="generator">
+
 
     <div id="cipher-box">
       <p id="word" class="mainText">Press Play</p>
       <p id="time" class="mainText">30</p>
     </div>
+
 
     <div id="time-box">
       <button id="fifteen" class="timeButton" type="submit" value="15000">
@@ -61,11 +73,12 @@
       <i class="fas fa-play" id="playPause"></i>
       <i class="fas fa-forward" id="nextBtn"></i>
     </div>
+  </div>
 
-  </div>
-  <div id="sound-box">
-    <iframe id="sCloud" width="70%" scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-  </div>
+
+
+
+
 
 
 </body>
