next and previous buttons now work respectively to songs on for beat control

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
         <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
         <li><i class="fas fa-angle-right"></i><strong> Trending Twitter Tags</strong></li>
-        <li id="animalsOption"><i class="fas fa-angle-right"></i><strong>Animals</strong></li>
+        <li id="animalsOption"><i class="fas fa-angle-right"></i><strong> Animals</strong></li>
         <li><i class="fas fa-angle-right"></i><strong> Donkey</strong></li>
       </ul>
     </div>
     <i id="beatControlBtn" class="fa fa-music controlBtn" aria-hidden="true"></i>
     <div id="musicBox" class="controlMenu mainText">
       <ul id="musicControls">
-        <li>something</li>
-        <li>something</li>
-        <li>something</li>
+        <li><i id="prevBeat" class="fas fa-backward"></i></li>
+        <li><i id="playMusic" class="fas fa-play"></i></li>
+        <li><i id="nextBeat" class="fas fa-forward"></i></li>
       </ul>
       <div>
-        <iframe id="sCloud" scrolling="yes" frameborder="yes" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <iframe id="sCloud" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
       </div>
     </div>
     <i id="backgroundBtn" class="fa fa-camera controlBtn" aria-hidden="true"></i>
