--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
   <title>Cipher Gen</title>
   <script src="other/jquery.js"></script>
-  <script src="other/soundcloudWidget.js" defer></script>
-  <script src="scripts/main.js" defer></script>
+  <script src="other/soundcloudWidget.js"
+    defer></script>
+  <script src="scripts/main.js"
+    defer></script>
   <script src="wordBanks/actorActress.js"></script>
   <script src="wordBanks/word_generator.js"></script>
   <script src="wordBanks/animals.js"></script>
   <script src="scripts/timeButtons.js"></script>
-  <script src="scripts/controlMenu.js" defer></script>
-  <link rel="stylesheet" href="styleSheets/cipher.css" />
-  <link rel="stylesheet" href="styleSheets/boxes.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+  <script src="scripts/controlMenu.js"
+    defer></script>
+  <link rel="stylesheet"
+    href="styleSheets/cipher.css" />
+  <link rel="stylesheet"
+    href="styleSheets/boxes.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Saira"
+    rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous" />
 </head>
 
 <body>
   <h1>Cipher Gen</h1>
   <div id="controlMenu">
-    <i id="topicBtn" class="fa fa-bars controlBtn" aria-hidden="true"></i>
-    <div id="topics-box" class="mainText controlMenu">
+    <i id="topicBtn"
+      class="fa fa-bars controlBtn"
+      aria-hidden="true"></i>
+    <div id="topics-box"
+      class="mainText controlMenu">
       <ul id=#topicsList>
         <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
         <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
@@ -32,46 +45,109 @@
         <li><i class="fas fa-angle-right"></i><strong> Donkey</strong></li>
       </ul>
     </div>
-    <i id="beatControlBtn" class="fa fa-music controlBtn" aria-hidden="true"></i>
-    <div id="musicBox" class="controlMenu mainText">
+    <i id="beatControlBtn"
+      class="fa fa-music controlBtn"
+      aria-hidden="true"></i>
+    <div id="musicBox"
+      class="controlMenu mainText">
       <ul id="musicControls">
-        <li><i id="prevBeat" class="fas fa-backward"></i></li>
-        <li><i id="playMusic" class="fas fa-play"></i></li>
-        <li><i id="nextBeat" class="fas fa-forward"></i></li>
+        <li><i id="prevBeat"
+            class="fas fa-backward"></i></li>
+        <li><i id="playMusic"
+            class="fas fa-play"></i></li>
+        <li><i id="nextBeat"
+            class="fas fa-forward"></i></li>
       </ul>
       <div>
-        <iframe id="sCloud" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+        <iframe id="sCloud"
+          allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
       </div>
     </div>
-    <i id="backgroundBtn" class="fa fa-camera controlBtn" aria-hidden="true"></i>
+    <i id="backgroundBtn"
+      class="fa fa-camera controlBtn"
+      aria-hidden="true"></i>
   </div>
+  <!--<div id="controlMenu">
+    <i id="topicBtn"
+      class="fa fa-bars controlBtn"
+      aria-hidden="true"></i>
+    <div id="topics-box"
+      class="mainText controlMenu">
+      <ul id=#topicsList>
+        <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
+        <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
+        <li><i class="fas fa-angle-right"></i><strong> Trending Twitter Tags</strong></li>
+        <li id="animalsOption"><i class="fas fa-angle-right"></i><strong> Animals</strong></li>
+        <li><i class="fas fa-angle-right"></i><strong> Donkey</strong></li>
+      </ul>
+    </div>
+    <i id="beatControlBtn"
+      class="fa fa-music controlBtn"
+      aria-hidden="true"></i>
+    <div id="musicBox"
+      class="controlMenu mainText">
+      <ul id="musicControls">
+        <li><i id="prevBeat"
+            class="fas fa-backward"></i></li>
+        <li><i id="playMusic"
+            class="fas fa-play"></i></li>
+        <li><i id="nextBeat"
+            class="fas fa-forward"></i></li>
+      </ul>
+      <iframe id="sCloud"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </div>
+    <i id="backgroundBtn"
+      class="fa fa-camera controlBtn"
+      aria-hidden="true"></i>
+  </div>-->
   <div id="generator">
 
 
     <div id="cipher-box">
-      <p id="word" class="mainText">Press Play</p>
-      <p id="time" class="mainText">30</p>
+      <p id="word"
+        class="mainText">Click The MIC</p>
+      <p id="time"
+        class="mainText">30</p>
     </div>
 
-
     <div id="time-box">
-      <button id="fifteen" class="timeButton" type="submit" value="15000">
+      <button id="fifteen"
+        class="timeButton"
+        type="submit"
+        value="15000">
         15
       </button>
-      <button id="twenty" class="timeButton" type="submit" value="20000">
+      <button id="twenty"
+        class="timeButton"
+        type="submit"
+        value="20000">
         20
       </button>
-      <button id="twenty-five" class="timeButton" type="submit" value="25000">
+      <button id="twenty-five"
+        class="timeButton"
+        type="submit"
+        value="25000">
         25
       </button>
-      <button id="thirty" class="timeButton" type="submit" value="30000">
+      <button id="thirty"
+        class="timeButton"
+        type="submit"
+        value="30000">
         30
       </button>
     </div>
 
     <div id="button-box">
-      <i class="fas fa-play" id="playPause"></i>
-      <i class="fas fa-forward" id="nextBtn"></i>
+      <ul id="buttonsList"
+        class="mainText startSkip">
+        <li id="start"><i class="fas fa-microphone-alt startSkip"
+            id="playPause"></i></li>
+        <li id="skip"><i class="fas fa-forward startSkip"
+            id="nextBtn"></i></li>
+      </ul>
     </div>
   </div>
 
