--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Cipher Gen</title>
   <script src="other/jquery.js"></script>
   <script src="other/soundcloudWidget.js"
-    defer></script>
+    async></script>
   <script src="scripts/main.js"
     defer></script>
   <script src="wordBanks/actorActress.js"></script>
@@ -60,52 +60,16 @@
       </ul>
       <div>
         <iframe id="sCloud"
+          width="99%"
+          height="400px"
           allow="autoplay"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-      </div>
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=false"></iframe></div>
     </div>
     <i id="backgroundBtn"
       class="fa fa-camera controlBtn"
       aria-hidden="true"></i>
   </div>
-  <!--<div id="controlMenu">
-    <i id="topicBtn"
-      class="fa fa-bars controlBtn"
-      aria-hidden="true"></i>
-    <div id="topics-box"
-      class="mainText controlMenu">
-      <ul id=#topicsList>
-        <li id="basicOption"><i class="fas fa-angle-right"></i><strong> Basic Words</strong></li>
-        <li id="actorsActressOption"><i class="fas fa-angle-right"></i><strong> Actors/Actresses</strong></li>
-        <li><i class="fas fa-angle-right"></i><strong> Trending Twitter Tags</strong></li>
-        <li id="animalsOption"><i class="fas fa-angle-right"></i><strong> Animals</strong></li>
-        <li><i class="fas fa-angle-right"></i><strong> Donkey</strong></li>
-      </ul>
-    </div>
-    <i id="beatControlBtn"
-      class="fa fa-music controlBtn"
-      aria-hidden="true"></i>
-    <div id="musicBox"
-      class="controlMenu mainText">
-      <ul id="musicControls">
-        <li><i id="prevBeat"
-            class="fas fa-backward"></i></li>
-        <li><i id="playMusic"
-            class="fas fa-play"></i></li>
-        <li><i id="nextBeat"
-            class="fas fa-forward"></i></li>
-      </ul>
-      <iframe id="sCloud"
-        allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/326953704&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-    </div>
-    <i id="backgroundBtn"
-      class="fa fa-camera controlBtn"
-      aria-hidden="true"></i>
-  </div>-->
   <div id="generator">
-
-
     <div id="cipher-box">
       <p id="word"
         class="mainText">Click The MIC</p>
